@@ -1,3 +1,4 @@
+1/23/14 shorter points on graph indicators, move indicators closer to scale, less whitespace between scale and indicators (ok to overlap ticks)
 1/23/14 move 'Reset All' buttons to same position (lower right) in all screens
 1/23/14 add temporary icon for 'Basics' screen
 1/23/14 move ph-scale-basics sim title to ph-scale-basics-strings_en.json
